2000-08-26  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-view.c (mail_view_create): Use
	`gtk_window_set_default_size' on the toplevel instead of
	`gtk_widget_set_usize()', and make the default size smaller.

2000-08-25  Christopher James Lahey  <clahey@helixcode.com>

	* mail-crypto.c: Fixed an uninitialized variable.

2000-08-26  JP Rosevear  <jpr@helixcode.com>

	* evolution-mail.gnorba: Kill

	* Makefile.am: Remove gnorba related stuff

2000-08-25  Peter Williams  <peterw@helixcode.com>

	* mail-config-gui.c (service_page_item_new): If the service wants
	a host, also let the user specify a port.
	(MailDialogServicePageItem): Add members for the port GtkEntry and
	the default port.
	(service_page_get_url): Translate the port in the entry back into
	the CamelURL.
	(service_page_set_url): Read in the port from the URL or use
	the default.

2000-08-25  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-crypto.c (mail_crypto_openpgp_encrypt): Implemented PGP 2.x
	encryption. We only need to get the passphrase if we plan to sign
	the text, otherwise we don't need to worry about getting the
	passphrase.

2000-08-24  Lauris Kaplinski  <lauris@helixcode.com>

	* folder-browser.c: Use e_utf8 wrappers

	* mail-config-gui.c: Use e_utf8 wrappers

2000-08-24  Peter Williams  <peterw@helixcode.com>

	* folder-browser-factory.c (control_activate): Add all the
	functions from message-list.c's popup menu to the main
	menu as well

	* message-list.c (vfolder_subject): These functions become
	public.

	* mail-callbacks.c (mark_all_seen): Don't call camel_folder_get_uids
	here. IMAP, for example, will try to communicate with the IMAP
	server during that call.

	* mail-ops.c (cleanup_fetch_mail): Tell the user
	which URL has no new mail, as they may be checking
	more than one source.
	(mail_do_flag_all_messages): New function. Flags all of
	the messages in a folder. Something of a hack. This merely
	extends the flag_messages operation; it doesn't implement
	a new one.